adicionados e corrigidos exercicios

--- a/1.html
+++ b/1.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
 
-<!-- QUESTÕES AULA 1 -->
-<!-- QUESTÃO 1 -->
-Solucione o sistema:
-</br></br>
+    <!-- QUESTÕES AULA 1 -->
+    <!-- QUESTÃO 1 -->
+    Solucione o sistema:
+    </br></br>
 
-<math display="block" xmlns="http://www.w3.org/1998/Math/MathML">
+    <math display="block" xmlns="http://www.w3.org/1998/Math/MathML">
         <mtable columnwidth="100%" width="100%" columnalign="center">
             <mtr>
                 <mtd>
@@ -95,27 +97,24 @@ Solucione o sistema:
             </mtr>
         </mtable>
     </math>
+    <p>
+        <!-- RESPOSTA CERTA -->
+        x1 = 1 e x2 = 3 <br>
+        <b>x1 = 1 e x2 = 2</b> <br>
+        x1 = 2 e x2 = 2 <br>
+        x1 = 1 e x2 = 1 <br>
+    </p>
 
-    <h4>x1 = 1 e x2 = 3</h4>
-    <h4>x1 = 1 e x2 = 2</h4>
-    <h4>x1 = 2 e x2 = 2</h4>
-    <h4>x1 = 1 e x2 = 1</h4>
-    <!-- RESPOSTA CERTA -->
-    <h4>x1 = 1 e x2 = 2</h4>
-
-<!-- QUESTÃO 2 -->
-
-Um sistema de equações pode ter:<br>
-Exatamente uma solução.<br>
-Infinitas uma solução.<br>
-Nenhuma solução.<br>
-Todas as anteriores estão corretas.<br>
-<!-- RESPOSTA -->
-Todas as anteriores estão corretas.<br>
-
-
-
-
+    <!-- QUESTÃO 2 -->
+    <p>
+        <!-- RESPOSTA -->
+        Um sistema de equações pode ter:<br><br>
+        Exatamente uma solução.<br>
+        Infinitas uma solução.<br>
+        Nenhuma solução.<br>
+        <b>Todas as anteriores estão corretas.</b> <br>
+    </p>
 
 </body>
+
 </html>
