--- a/2.html
+++ b/2.html
@@ -107,33 +107,286 @@
             <mo fence="true" stretchy="true" symmetric="true"></mo>
         </mrow>
     </math>
+
+    <!-- RESPOSTA -->
+    <math display="block" xmlns="http://www.w3.org/1998/Math/MathML">
+        <mspace is="true" width="0.22em"></mspace>
+        <mrow>
+            <mo fence="true">[</mo>
+            <mtable columnalign="center center center center">
+                <mtr>
+                    <mtd>
+                        <mn>1</mn>
+                    </mtd>
+                    <mtd>
+                        <mrow>
+                            <mo form="prefix">-</mo>
+                            <mn>2</mn>
+                        </mrow>
+                    </mtd>
+                    <mtd>
+                        <mn>1</mn>
+                    </mtd>
+                    <mtd>
+                        <mn>0</mn>
+                    </mtd>
+                </mtr>
+                <mtr>
+                    <mtd>
+                        <mn>0</mn>
+                    </mtd>
+                    <mtd>
+                        <mn>2</mn>
+                    </mtd>
+                    <mtd>
+                        <mrow>
+                            <mo form="prefix">-</mo>
+                            <mn>8</mn>
+                        </mrow>
+                    </mtd>
+                    <mtd>
+                        <mn>8</mn>
+                    </mtd>
+                </mtr>
+                <mtr>
+                    <mtd>
+                        <mrow>
+                            <mo form="prefix">-</mo>
+                            <mn>4</mn>
+                        </mrow>
+                    </mtd>
+                    <mtd>
+                        <mn>5</mn>
+                    </mtd>
+                    <mtd>
+                        <mn>9</mn>
+                    </mtd>
+                    <mtd>
+                        <mrow>
+                            <mo form="prefix">-</mo>
+                            <mn>9</mn>
+                        </mrow>
+                    </mtd>
+                </mtr>
+            </mtable>
+            <mo fence="true">]</mo>
+        </mrow>
+    </math>
+
+    <math display="block" xmlns="http://www.w3.org/1998/Math/MathML">
+        <mspace is="true" width="0.22em"></mspace>
+        <mrow>
+            <mo fence="true">[</mo>
+            <mtable columnalign="center center center center">
+                <mtr>
+                    <mtd>
+                        <mn>1</mn>
+                    </mtd>
+                    <mtd>
+                        <mrow>
+                            <mo form="prefix">-</mo>
+                            <mn>2</mn>
+                        </mrow>
+                    </mtd>
+                    <mtd>
+                        <mn>1</mn>
+                    </mtd>
+                    <mtd>
+                        <mn>0</mn>
+                    </mtd>
+                </mtr>
+                <mtr>
+                    <mtd>
+                        <mn>0</mn>
+                    </mtd>
+                    <mtd>
+                        <mn>2</mn>
+                    </mtd>
+                    <mtd>
+                        <mrow>
+                            <mo form="prefix">-</mo>
+                            <mn>8</mn>
+                        </mrow>
+                    </mtd>
+                    <mtd>
+                        <mn>8</mn>
+                    </mtd>
+                </mtr>
+                <mtr>
+                    <mtd>
+                        <mrow>
+                            <mo form="prefix">-</mo>
+                            <mn>4</mn>
+                        </mrow>
+                    </mtd>
+                    <mtd>
+                        <mn>5</mn>
+                    </mtd>
+                    <mtd>
+                        <mn>9</mn>
+                    </mtd>
+                    <mtd>
+                        <mrow>
+                            <mo form="prefix"></mo>
+                            <mn>9</mn>
+                        </mrow>
+                    </mtd>
+                </mtr>
+            </mtable>
+            <mo fence="true">]</mo>
+        </mrow>
+    </math>
+
+    <math display="block" xmlns="http://www.w3.org/1998/Math/MathML">
+        <mspace is="true" width="0.22em"></mspace>
+        <mrow>
+            <mo fence="true">[</mo>
+            <mtable columnalign="center center center center">
+                <mtr>
+                    <mtd>
+                        <mn>1</mn>
+                    </mtd>
+                    <mtd>
+                        <mrow>
+                            <mo form="prefix">-</mo>
+                            <mn>2</mn>
+                        </mrow>
+                    </mtd>
+                    <mtd>
+                        <mn>1</mn>
+                    </mtd>
+                    <mtd>
+                        <mn>0</mn>
+                    </mtd>
+                </mtr>
+                <mtr>
+                    <mtd>
+                        <mn>0</mn>
+                    </mtd>
+                    <mtd>
+                        <mn>2</mn>
+                    </mtd>
+                    <mtd>
+                        <mrow>
+                            <mo form="prefix">+</mo>
+                            <mn>8</mn>
+                        </mrow>
+                    </mtd>
+                    <mtd>
+                        <mn>8</mn>
+                    </mtd>
+                </mtr>
+                <mtr>
+                    <mtd>
+                        <mrow>
+                            <mo form="prefix">-</mo>
+                            <mn>4</mn>
+                        </mrow>
+                    </mtd>
+                    <mtd>
+                        <mn>5</mn>
+                    </mtd>
+                    <mtd>
+                        <mn>9</mn>
+                    </mtd>
+                    <mtd>
+                        <mrow>
+                            <mo form="prefix">-</mo>
+                            <mn>9</mn>
+                        </mrow>
+                    </mtd>
+                </mtr>
+            </mtable>
+            <mo fence="true">]</mo>
+        </mrow>
+    </math>
+
+    <math display="block" xmlns="http://www.w3.org/1998/Math/MathML">
+        <mspace is="true" width="0.22em"></mspace>
+        <mrow>
+            <mo fence="true">[</mo>
+            <mtable columnalign="center center center center">
+                <mtr>
+                    <mtd>
+                        <mn>11</mn>
+                    </mtd>
+                    <mtd>
+                        <mrow>
+                            <mo form="prefix">-</mo>
+                            <mn>2</mn>
+                        </mrow>
+                    </mtd>
+                    <mtd>
+                        <mn>1</mn>
+                    </mtd>
+                    <mtd>
+                        <mn>0</mn>
+                    </mtd>
+                </mtr>
+                <mtr>
+                    <mtd>
+                        <mn>0</mn>
+                    </mtd>
+                    <mtd>
+                        <mn>2</mn>
+                    </mtd>
+                    <mtd>
+                        <mrow>
+                            <mo form="prefix">-</mo>
+                            <mn>8</mn>
+                        </mrow>
+                    </mtd>
+                    <mtd>
+                        <mn>8</mn>
+                    </mtd>
+                </mtr>
+                <mtr>
+                    <mtd>
+                        <mrow>
+                            <mo form="prefix">-</mo>
+                            <mn>4</mn>
+                        </mrow>
+                    </mtd>
+                    <mtd>
+                        <mn>5</mn>
+                    </mtd>
+                    <mtd>
+                        <mn>9</mn>
+                    </mtd>
+                    <mtd>
+                        <mrow>
+                            <mo form="prefix">-</mo>
+                            <mn>9</mn>
+                        </mrow>
+                    </mtd>
+                </mtr>
+            </mtable>
+            <mo fence="true">]</mo>
+        </mrow>
+    </math>
+
+
+    <!-- QUESTÃO 2 -->
+
+    Observe as afirmativas: <br><br>
+
+    <ol>
+        <li>Pivô é um número não nulo;</li>
+        <li>É usado para criar zeros por operações elementares;</li>
+        <li>É uma posição do basquete;</li>
+    </ol>
+
+    <p>
+        <!-- RESPOSTA -->
+        1 está correta; <br>
+        2 está correta; <br>
+        3 está correta; <br>
+        <b>Todas estão corretas;</b> <br>
+    </p>
+
+
+
 </body>
 
-<math display="block" xmlns="http://www.w3.org/1998/Math/MathML"><mspace is="true" width="0.22em"></mspace><mrow><mo fence="true">[</mo><mtable columnalign="center center center center"><mtr><mtd><mn>1</mn></mtd><mtd><mrow><mo form="prefix">-</mo><mn>2</mn></mrow></mtd><mtd><mn>1</mn></mtd><mtd><mn>0</mn></mtd></mtr><mtr><mtd><mn>0</mn></mtd><mtd><mn>2</mn></mtd><mtd><mrow><mo form="prefix">-</mo><mn>8</mn></mrow></mtd><mtd><mn>8</mn></mtd></mtr><mtr><mtd><mrow><mo form="prefix">-</mo><mn>4</mn></mrow></mtd><mtd><mn>5</mn></mtd><mtd><mn>9</mn></mtd><mtd><mrow><mo form="prefix">-</mo><mn>9</mn></mrow></mtd></mtr></mtable><mo fence="true">]</mo></mrow></math>
 
-<math display="block" xmlns="http://www.w3.org/1998/Math/MathML"><mspace is="true" width="0.22em"></mspace><mrow><mo fence="true">[</mo><mtable columnalign="center center center center"><mtr><mtd><mn>1</mn></mtd><mtd><mrow><mo form="prefix">-</mo><mn>2</mn></mrow></mtd><mtd><mn>1</mn></mtd><mtd><mn>0</mn></mtd></mtr><mtr><mtd><mn>0</mn></mtd><mtd><mn>2</mn></mtd><mtd><mrow><mo form="prefix">-</mo><mn>8</mn></mrow></mtd><mtd><mn>8</mn></mtd></mtr><mtr><mtd><mrow><mo form="prefix">-</mo><mn>4</mn></mrow></mtd><mtd><mn>5</mn></mtd><mtd><mn>9</mn></mtd><mtd><mrow><mo form="prefix"></mo><mn>9</mn></mrow></mtd></mtr></mtable><mo fence="true">]</mo></mrow></math>
-
-<math display="block" xmlns="http://www.w3.org/1998/Math/MathML"><mspace is="true" width="0.22em"></mspace><mrow><mo fence="true">[</mo><mtable columnalign="center center center center"><mtr><mtd><mn>1</mn></mtd><mtd><mrow><mo form="prefix">-</mo><mn>2</mn></mrow></mtd><mtd><mn>1</mn></mtd><mtd><mn>0</mn></mtd></mtr><mtr><mtd><mn>0</mn></mtd><mtd><mn>2</mn></mtd><mtd><mrow><mo form="prefix">+</mo><mn>8</mn></mrow></mtd><mtd><mn>8</mn></mtd></mtr><mtr><mtd><mrow><mo form="prefix">-</mo><mn>4</mn></mrow></mtd><mtd><mn>5</mn></mtd><mtd><mn>9</mn></mtd><mtd><mrow><mo form="prefix">-</mo><mn>9</mn></mrow></mtd></mtr></mtable><mo fence="true">]</mo></mrow></math>
-
-<math display="block" xmlns="http://www.w3.org/1998/Math/MathML"><mspace is="true" width="0.22em"></mspace><mrow><mo fence="true">[</mo><mtable columnalign="center center center center"><mtr><mtd><mn>11</mn></mtd><mtd><mrow><mo form="prefix">-</mo><mn>2</mn></mrow></mtd><mtd><mn>1</mn></mtd><mtd><mn>0</mn></mtd></mtr><mtr><mtd><mn>0</mn></mtd><mtd><mn>2</mn></mtd><mtd><mrow><mo form="prefix">-</mo><mn>8</mn></mrow></mtd><mtd><mn>8</mn></mtd></mtr><mtr><mtd><mrow><mo form="prefix">-</mo><mn>4</mn></mrow></mtd><mtd><mn>5</mn></mtd><mtd><mn>9</mn></mtd><mtd><mrow><mo form="prefix">-</mo><mn>9</mn></mrow></mtd></mtr></mtable><mo fence="true">]</mo></mrow></math>
-<!-- RESPOSTA -->
-<math display="block" xmlns="http://www.w3.org/1998/Math/MathML"><mspace is="true" width="0.22em"></mspace><mrow><mo fence="true">[</mo><mtable columnalign="center center center center"><mtr><mtd><mn>1</mn></mtd><mtd><mrow><mo form="prefix">-</mo><mn>2</mn></mrow></mtd><mtd><mn>1</mn></mtd><mtd><mn>0</mn></mtd></mtr><mtr><mtd><mn>0</mn></mtd><mtd><mn>2</mn></mtd><mtd><mrow><mo form="prefix">-</mo><mn>8</mn></mrow></mtd><mtd><mn>8</mn></mtd></mtr><mtr><mtd><mrow><mo form="prefix">-</mo><mn>4</mn></mrow></mtd><mtd><mn>5</mn></mtd><mtd><mn>9</mn></mtd><mtd><mrow><mo form="prefix">-</mo><mn>9</mn></mrow></mtd></mtr></mtable><mo fence="true">]</mo></mrow></math>
-
-
-<!-- QUESTÃO 2 -->
-
-Observe as afirmativas: <br><br>
-
-<ol>
-    <li>Pivô é um número não nulo;</li>
-    <li>É usado para criar zeros por operações elementares;</li>
-    <li>É uma posição do basquete;</li>
-
-    <h4>1 está correta;</h4>
-    <h4>2 está correta;</h4>
-    <h4>3 está correta;</h4>
-    <h4>Todas estão corretas;</h4>
-    <!-- RESPOSTA -->
-    <h4>Todas estão corretas;</h4>
-</ol>
 </html>
