--- a/4.html
+++ b/4.html
@@ -1,32 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <!-- QUESTÃO 1 -->
     Quais são as classificações de sistemas: <br><br>
 
-    <h4>Sistema Impossível, Sistema Possível Determinado, Sistema Possível Inderteminado</h4>
-    <h4>Sistema Complicado, Sistema Possível Determinado, Sistema Possível Inderteminado</h4>
-    <h4>Sistema Impossível, Sistema Possível Determinado, Sistema Matemático</h4>
-    <h4>Sistema Impossível, Sistema Reduzido, Sistema Possível Inderteminado</h4>
     <!-- RESPOSTA -->
-    <h4>Sistema Impossível, Sistema Possível Determinado, Sistema Possível Inderteminado</h4>
+    <p>
+        <b>Sistema Impossível, Sistema Possível Determinado, Sistema Possível Inderteminado</b> <br>
+        Sistema Complicado, Sistema Possível Determinado, Sistema Possível Inderteminado <br>
+        Sistema Impossível, Sistema Possível Determinado, Sistema Matemático <br>
+        Sistema Impossível, Sistema Reduzido, Sistema Possível Inderteminado <br>
+    </p>
 
+    <!-- QUESTÃO -->
     Qual a classificação do sistema? <br><br>
 
-    <math display="block" xmlns="http://www.w3.org/1998/Math/MathML"><mspace is="true" width="0.22em"></mspace><mrow><mo fence="true">[</mo><mtable columnalign="center center center center"><mtr><mtd><mn>1</mn></mtd><mtd><mn>2</mn></mtd><mtd><mn>0</mn></mtd><mtd><mn>4</mn></mtd></mtr><mtr><mtd><mn>0</mn></mtd><mtd><mn>1</mn></mtd><mtd><mn>1</mn></mtd><mtd><mn>0</mn></mtd></mtr><mtr><mtd><mn>0</mn></mtd><mtd><mn>0</mn></mtd><mtd><mrow><mo form="prefix">-</mo><mn>2</mn></mrow></mtd><mtd><mn>2</mn></mtd></mtr></mtable><mo fence="true">]</mo></mrow></math>
+    <math display="block" xmlns="http://www.w3.org/1998/Math/MathML">
+        <mspace is="true" width="0.22em"></mspace>
+        <mrow>
+            <mo fence="true">[</mo>
+            <mtable columnalign="center center center center">
+                <mtr>
+                    <mtd>
+                        <mn>1</mn>
+                    </mtd>
+                    <mtd>
+                        <mn>2</mn>
+                    </mtd>
+                    <mtd>
+                        <mn>0</mn>
+                    </mtd>
+                    <mtd>
+                        <mn>4</mn>
+                    </mtd>
+                </mtr>
+                <mtr>
+                    <mtd>
+                        <mn>0</mn>
+                    </mtd>
+                    <mtd>
+                        <mn>1</mn>
+                    </mtd>
+                    <mtd>
+                        <mn>1</mn>
+                    </mtd>
+                    <mtd>
+                        <mn>0</mn>
+                    </mtd>
+                </mtr>
+                <mtr>
+                    <mtd>
+                        <mn>0</mn>
+                    </mtd>
+                    <mtd>
+                        <mn>0</mn>
+                    </mtd>
+                    <mtd>
+                        <mrow>
+                            <mo form="prefix">-</mo>
+                            <mn>2</mn>
+                        </mrow>
+                    </mtd>
+                    <mtd>
+                        <mn>2</mn>
+                    </mtd>
+                </mtr>
+            </mtable>
+            <mo fence="true">]</mo>
+        </mrow>
+    </math>
 
-    <h4>Sistema Possível Determinado</h4>
-    <h4>Sistema Possível Inderteminado</h4>
-    <h4>Sistema Impossível</h4>
-    <h4>Todos os anteriores</h4>
     <!-- RESPOSTA -->
-    <h4>Sistema Possível Determinado</h4>
-
+    <p>
+        <b>Sistema Possível Determinado</b> <br>
+        Sistema Possível Inderteminado <br>
+        Sistema Impossível <br>
+        Todos os anteriores <br>
+    </p>
 
 </body>
+
 </html>
